operator/pkg/gateway-api/testdata/gateway/httproute-disallowed-kind/output/httproute-disallowed-kind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: disallowed-kind
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
    - name: tlsroutes-only
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-07-01T14:19:43Z"
          message: "No matching listener protocol; route requires one of: [HTTP HTTPS]"
          reason: NotAllowedByListeners
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:19:43Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: tlsroutes-only
        namespace: gateway-conformance-infra
